examples/__outputs__/10_transport-http/transport-http_method-get.output.txt
/some/path/to/transport-http_method-get.ts:7
import { serveSchema, show } from '../$/helpers.js'
         ^

SyntaxError: The requested module '../$/helpers.js' does not provide an export named 'serveSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:XX:XX)
    at async ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX